--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+h1{
+  font-family: 'Climate Crisis', sans-serif;
+}
+p {
+  font-family: 'Inter Tight', sans-serif;
+  font-weight: 300;
+}
